--- a/workflowgrader.ipynb
+++ b/workflowgrader.ipynb
@@ -63,7 +63,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "97bbefc2",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -105,14 +107,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:34<00:00, 17.21s/it]"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:37<00:00, 18.85s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 34.5 s\n"
+      "Wall time: 37.7 s\n"
      ]
     },
     {
@@ -132,7 +134,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "888b42f3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -345,7 +349,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 920.51it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 1938.67it/s]\n"
      ]
     }
    ],
@@ -355,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "eb2bb326",
    "metadata": {},
    "outputs": [],
@@ -365,7 +369,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "id": "58f3db68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'11006381_complete': ([], []),\n",
+       " '11006381_complete_more': (['output_1'], ['output1', 'output_3'])}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "780c95fa",
    "metadata": {},
    "outputs": [
@@ -373,7 +399,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 1307.45it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 210.06it/s]\n"
      ]
     }
    ],
@@ -383,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "17d56da3",
    "metadata": {},
    "outputs": [],
@@ -393,7 +419,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
+   "id": "469566ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'output_1': {'11006381_complete': (['EstWeight'],\n",
+       "   [('hours-per-week(new)', dtype('int64'), dtype('float64'))]),\n",
+       "  '11006381_complete_more': (None, None)},\n",
+       " 'output_2': {'11006381_complete': (['EstWeight'],\n",
+       "   [('hours-per-week(new)', dtype('int64'), dtype('float64'))]),\n",
+       "  '11006381_complete_more': (['EstWeight'],\n",
+       "   [('hours-per-week(new)', dtype('int64'), dtype('float64'))])}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "89717036",
    "metadata": {},
    "outputs": [],
@@ -404,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "71ff0a47",
    "metadata": {},
    "outputs": [
@@ -465,13 +518,192 @@
        "11006381_complete_more  ([EstWeight], [(hours-per-week(new), int64, fl...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.merge(qdf,vdf,left_index=True,right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "870765f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week(new)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>121772</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>84154</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>293936</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>117747</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1573</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>153141</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>191196</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>452</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>199590</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>71556</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>454</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>217597</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>455</th>\n",
+       "      <td>middle</td>\n",
+       "      <td>107302</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>456 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        age  fnlwgt  education-num  capital-gain  capital-loss  \\\n",
+       "0    middle  121772             11             0             0   \n",
+       "1    middle   84154             10             0             0   \n",
+       "2    middle  293936              4             0             0   \n",
+       "3    middle  117747              9             0          1573   \n",
+       "4    middle  153141              9             0             0   \n",
+       "..      ...     ...            ...           ...           ...   \n",
+       "451  middle  191196             13             0          1977   \n",
+       "452  middle  199590              3             0             0   \n",
+       "453  middle   71556             14             0             0   \n",
+       "454  middle  217597              9             0             0   \n",
+       "455  middle  107302              9             0             0   \n",
+       "\n",
+       "     hours-per-week(new)  \n",
+       "0                   40.0  \n",
+       "1                   38.0  \n",
+       "2                   40.0  \n",
+       "3                   35.0  \n",
+       "4                   40.0  \n",
+       "..                   ...  \n",
+       "451                 60.0  \n",
+       "452                 40.0  \n",
+       "453                 50.0  \n",
+       "454                 50.0  \n",
+       "455                 45.0  \n",
+       "\n",
+       "[456 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wfg.sub_outputs['11006381_complete']['output_1']"
    ]
   },
   {
@@ -483,7 +715,9 @@
     "\n",
     "Using the dataframe above, we can use it to generate feedback for each student and statistics of the data collected.\n",
     "\n",
-    "## up next, check the data by columns"
+    "## up next, check the data by columns\n",
+    "\n",
+    "## extract the nodes used in the workflow"
    ]
   },
   {
