--- a/node-usage-analysis.ipynb
+++ b/node-usage-analysis.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "87161444",
+   "metadata": {},
+   "source": [
+    "## Node usage analysis\n",
+    "\n",
+    "This notebook demonstrates how the `workflowgrader class` can help to extract the data of the nodes used in the workflows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ea259a21",
@@ -40,9 +50,10 @@
       "0 C:/Users/s11006381/knime-workspace/small_gradespace\\.metadata\n",
       "1 C:/Users/s11006381/knime-workspace/small_gradespace\\11006381_complete\n",
       "2 C:/Users/s11006381/knime-workspace/small_gradespace\\11006381_complete_more\n",
-      "3 C:/Users/s11006381/knime-workspace/small_gradespace\\C5_Lab5_Task1_Data_prep_clean\n",
-      "4 C:/Users/s11006381/knime-workspace/small_gradespace\\C5_Lab5_Task1_Data_prep_clean_with_COT\n",
-      "5 C:/Users/s11006381/knime-workspace/small_gradespace\\Example Workflows\n"
+      "3 C:/Users/s11006381/knime-workspace/small_gradespace\\11006381_partial_correct\n",
+      "4 C:/Users/s11006381/knime-workspace/small_gradespace\\C5_Lab5_Task1_Data_prep_clean\n",
+      "5 C:/Users/s11006381/knime-workspace/small_gradespace\\C5_Lab5_Task1_Data_prep_clean_with_COT\n",
+      "6 C:/Users/s11006381/knime-workspace/small_gradespace\\Example Workflows\n"
      ]
     }
    ],
@@ -50,6 +61,14 @@
     "workflow_dir_list = [os.path.join(workspace,os.listdir(workspace)[i]) for i in range(len(os.listdir(workspace)))]\n",
     "for i,j in enumerate(workflow_dir_list):\n",
     "    print(i,j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dddda213",
+   "metadata": {},
+   "source": [
+    "A `workflowgrader` is initialized with the workspace of interest and the name of the reference workflow where grading is conducted using it as a reference."
    ]
   },
   {
@@ -63,8 +82,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3bd3dc8",
+   "metadata": {},
+   "source": [
+    "The `.ref_nodes` method returns the count of the various nodes used in the reference workflow."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
+   "id": "98866a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CSV Reader': 2,\n",
+       " 'Column Filter': 1,\n",
+       " 'Concatenate': 1,\n",
+       " 'Container Output _Table_': 2,\n",
+       " 'Joiner': 1,\n",
+       " 'Nominal Value Row Filter': 1,\n",
+       " 'Numeric Binner': 1,\n",
+       " 'Reference Column Filter': 1,\n",
+       " 'Reference Row Filter': 1,\n",
+       " 'Row Filter': 2,\n",
+       " 'String Manipulation': 1,\n",
+       " 'String To Number': 1}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wfg.ref_nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da1188da",
+   "metadata": {},
+   "source": [
+    "The `.accumulate_workflow_nodes()` method is used to accumulate all the nodes used in the workflow to be graded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e475a3e5",
    "metadata": {},
    "outputs": [
@@ -72,194 +139,204 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 192.65it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [00:00<00:00, 250.54it/s]\n"
      ]
-    }
-   ],
-   "source": [
-    "d = wfg.accumulate_workflow_nodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "491fa9ba",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "{'11006381_complete': ['Column Filter',\n",
-       "  'Concatenate',\n",
-       "  'Container Output _Table_',\n",
-       "  'Container Output _Table_',\n",
-       "  'CSV Reader',\n",
-       "  'CSV Reader',\n",
-       "  'Joiner',\n",
-       "  'Nominal Value Row Filter',\n",
-       "  'Numeric Binner',\n",
-       "  'Reference Column Filter',\n",
-       "  'Reference Row Filter',\n",
-       "  'Row Filter',\n",
-       "  'Row Filter',\n",
-       "  'String Manipulation',\n",
-       "  'String To Number'],\n",
-       " '11006381_complete_more': ['Column Filter',\n",
-       "  'Concatenate',\n",
-       "  'Container Output _Table_',\n",
-       "  'Container Output _Table_',\n",
-       "  'Container Output _Table_',\n",
-       "  'CSV Reader',\n",
-       "  'CSV Reader',\n",
-       "  'Joiner',\n",
-       "  'Nominal Value Row Filter',\n",
-       "  'Numeric Binner',\n",
-       "  'Reference Column Filter',\n",
-       "  'Reference Row Filter',\n",
-       "  'Row Filter',\n",
-       "  'Row Filter',\n",
-       "  'String Manipulation',\n",
-       "  'String To Number']}"
+       "{'11006381_complete': {'CSV Reader': 2,\n",
+       "  'Column Filter': 1,\n",
+       "  'Concatenate': 1,\n",
+       "  'Container Output _Table_': 2,\n",
+       "  'Joiner': 1,\n",
+       "  'Nominal Value Row Filter': 1,\n",
+       "  'Numeric Binner': 1,\n",
+       "  'Reference Column Filter': 1,\n",
+       "  'Reference Row Filter': 1,\n",
+       "  'Row Filter': 2,\n",
+       "  'String Manipulation': 1,\n",
+       "  'String To Number': 1},\n",
+       " '11006381_complete_more': {'CSV Reader': 2,\n",
+       "  'Column Filter': 1,\n",
+       "  'Concatenate': 1,\n",
+       "  'Container Output _Table_': 3,\n",
+       "  'Joiner': 1,\n",
+       "  'Nominal Value Row Filter': 1,\n",
+       "  'Numeric Binner': 1,\n",
+       "  'Reference Column Filter': 1,\n",
+       "  'Reference Row Filter': 1,\n",
+       "  'Row Filter': 2,\n",
+       "  'String Manipulation': 1,\n",
+       "  'String To Number': 1},\n",
+       " '11006381_partial_correct': {'CSV Reader': 2,\n",
+       "  'Column Filter': 1,\n",
+       "  'Container Output _Table_': 1,\n",
+       "  'Joiner': 1,\n",
+       "  'Nominal Value Row Filter': 1,\n",
+       "  'Numeric Binner': 1,\n",
+       "  'Reference Column Filter': 1,\n",
+       "  'Row Filter': 1,\n",
+       "  'String Manipulation': 1,\n",
+       "  'String To Number': 1,\n",
+       "  'Concatenate': 0,\n",
+       "  'Reference Row Filter': 0}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d"
+    "wfg.accumulate_workflow_nodes()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a0213684",
+   "cell_type": "markdown",
+   "id": "a7fa2134",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.Series(d,name='test')"
+    "We can easily convert this to a pandas dataframe and after which to a csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "bc743992",
+   "execution_count": 16,
+   "id": "24b97d2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CSV Reader</th>\n",
+       "      <th>Column Filter</th>\n",
+       "      <th>Concatenate</th>\n",
+       "      <th>Container Output _Table_</th>\n",
+       "      <th>Joiner</th>\n",
+       "      <th>Nominal Value Row Filter</th>\n",
+       "      <th>Numeric Binner</th>\n",
+       "      <th>Reference Column Filter</th>\n",
+       "      <th>Reference Row Filter</th>\n",
+       "      <th>Row Filter</th>\n",
+       "      <th>String Manipulation</th>\n",
+       "      <th>String To Number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11006381_complete</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11006381_complete_more</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11006381_partial_correct</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "11006381_complete         [Column Filter, Concatenate, Container Output ...\n",
-       "11006381_complete_more    [Column Filter, Concatenate, Container Output ...\n",
-       "Name: test, dtype: object"
+       "                          CSV Reader  Column Filter  Concatenate  \\\n",
+       "11006381_complete                  2              1            1   \n",
+       "11006381_complete_more             2              1            1   \n",
+       "11006381_partial_correct           2              1            0   \n",
+       "\n",
+       "                          Container Output _Table_  Joiner  \\\n",
+       "11006381_complete                                2       1   \n",
+       "11006381_complete_more                           3       1   \n",
+       "11006381_partial_correct                         1       1   \n",
+       "\n",
+       "                          Nominal Value Row Filter  Numeric Binner  \\\n",
+       "11006381_complete                                1               1   \n",
+       "11006381_complete_more                           1               1   \n",
+       "11006381_partial_correct                         1               1   \n",
+       "\n",
+       "                          Reference Column Filter  Reference Row Filter  \\\n",
+       "11006381_complete                               1                     1   \n",
+       "11006381_complete_more                          1                     1   \n",
+       "11006381_partial_correct                        1                     0   \n",
+       "\n",
+       "                          Row Filter  String Manipulation  String To Number  \n",
+       "11006381_complete                  2                    1                 1  \n",
+       "11006381_complete_more             2                    1                 1  \n",
+       "11006381_partial_correct           1                    1                 1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df = pd.DataFrame.from_dict(d,orient='index')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2701f05a",
+   "execution_count": 20,
+   "id": "e661faba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def collect_workflow_nodes(path_to_knime_workflow):\n",
-    "    for settings_filepath in Path(path_to_knime_workflow).glob(\"*/settings.xml\"):\n",
-    "        node = re.split('[\\(\\)]',os.path.basename(settings_filepath.parent))[0].strip()\n",
-    "        print(node)\n",
-    "#         node_dist[os.path.basename(w)]"
+    "df.to_csv('out.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b99066a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collect(workflow_dir_list[9])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2df6c41a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36c58b08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "809bfe75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44b9fa35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame.from_dict(d, index=)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "471fde1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "with knime.Workflow(workflow_dir_list[9]) as wf:\n",
-    "    wf.display_svg()                       # displays svg graphical workflow\n",
-    "    wf.execute()                           # executes the workflow\n",
-    "    output_tables = wf.data_table_outputs  # saves all the data collected in the COT nodes as a list of pandas dataframe \n",
-    "    img = SVG(wf._adjust_svg())            # saves svg graphical workflow in img (for saving image to local drive)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ad63cc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "228f3330",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6630c97e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
