--- a/workflowgrader.ipynb
+++ b/workflowgrader.ipynb
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ef5b64f3",
+   "id": "f76a5bfb",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "38367432",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
        "11006381_partial_correct                         ([UNGRADED], [UNGRADED])  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,8 +1378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "d47c5010",
+   "execution_count": 52,
+   "id": "a5ecca4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,92 +1390,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "2efbe028",
+   "execution_count": 59,
+   "id": "dd7ab7be",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>output_1_missing_var</th>\n",
-       "      <th>output_1_incorrect_var_dtype</th>\n",
-       "      <th>output_2_missing_var</th>\n",
-       "      <th>output_2_incorrect_var_dtype</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11006381_complete</th>\n",
-       "      <td>[EstWeight]</td>\n",
-       "      <td>[(hours-per-week(new), float64)]</td>\n",
-       "      <td>[EstWeight]</td>\n",
-       "      <td>[(hours-per-week(new), float64)]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11006381_complete_more</th>\n",
-       "      <td>[UNGRADED]</td>\n",
-       "      <td>[UNGRADED]</td>\n",
-       "      <td>[EstWeight]</td>\n",
-       "      <td>[(hours-per-week(new), float64)]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11006381_partial_correct</th>\n",
-       "      <td>[]</td>\n",
-       "      <td>[(hours-per-week(new), float64)]</td>\n",
-       "      <td>[UNGRADED]</td>\n",
-       "      <td>[UNGRADED]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         output_1_missing_var  \\\n",
-       "11006381_complete                 [EstWeight]   \n",
-       "11006381_complete_more             [UNGRADED]   \n",
-       "11006381_partial_correct                   []   \n",
-       "\n",
-       "                              output_1_incorrect_var_dtype  \\\n",
-       "11006381_complete         [(hours-per-week(new), float64)]   \n",
-       "11006381_complete_more                          [UNGRADED]   \n",
-       "11006381_partial_correct  [(hours-per-week(new), float64)]   \n",
-       "\n",
-       "                         output_2_missing_var  \\\n",
-       "11006381_complete                 [EstWeight]   \n",
-       "11006381_complete_more            [EstWeight]   \n",
-       "11006381_partial_correct           [UNGRADED]   \n",
-       "\n",
-       "                              output_2_incorrect_var_dtype  \n",
-       "11006381_complete         [(hours-per-week(new), float64)]  \n",
-       "11006381_complete_more    [(hours-per-week(new), float64)]  \n",
-       "11006381_partial_correct                        [UNGRADED]  "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output_1\n",
+      "6\n",
+      "-0.33333333333333326\n",
+      "output_2\n",
+      "16\n",
+      "0.5\n"
+     ]
     }
    ],
    "source": [
-    "cvr_df['output_1_missing_var']"
+    "for i in wfg.ref_output.keys():\n",
+    "    print(i)\n",
+    "    print(len(wfg.ref_output[i].columns))\n",
+    "    print(1-(len(i)/len(wfg.ref_output[i].columns)))\n",
+    "#     for j in wfg.ref_output[i].columns:\n",
+    "#         print(len(j))\n"
    ]
   },
   {
@@ -1662,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6d38388e",
+   "id": "d9380f1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "363e28c3",
+   "id": "fb03e219",
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11432364",
+   "id": "b58c20ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "176f9f30",
+   "id": "860d3432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366dc96f",
+   "id": "b04804ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3882d04c",
+   "id": "b901a8ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a3de44",
+   "id": "88b7f135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2491ea8c",
+   "id": "7f3db91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1992,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c557cdf",
+   "id": "3252be5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "165a9df3",
+   "id": "4df4df87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,7 +1950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aece9ca",
+   "id": "8085ff7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2022,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bcbb5e1",
+   "id": "6a146696",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67b86452",
+   "id": "ba1098a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d809cd",
+   "id": "5d3cdfff",
    "metadata": {},
    "outputs": [],
    "source": []
